glf90w.h

extern int const glf90w_version_major;
extern int const glf90w_version_minor;
extern int const glf90w_version_revision;
extern int const glf90w_true;
extern int const glf90w_false;
extern int const glf90w_release;
extern int const glf90w_press;
extern int const glf90w_repeat;
extern int const glf90w_hat_centered;
extern int const glf90w_hat_up;
extern int const glf90w_hat_right;
extern int const glf90w_hat_down;
extern int const glf90w_hat_left;
extern int const glf90w_hat_right_up;
extern int const glf90w_hat_right_down;
extern int const glf90w_hat_left_up;
extern int const glf90w_hat_left_down;
extern int const glf90w_key_unknown;
extern int const glf90w_key_space;
extern int const glf90w_key_apostrophe;
extern int const glf90w_key_comma;
extern int const glf90w_key_minus;
extern int const glf90w_key_period;
extern int const glf90w_key_slash;
extern int const glf90w_key_0;
extern int const glf90w_key_1;
extern int const glf90w_key_2;
extern int const glf90w_key_3;
extern int const glf90w_key_4;
extern int const glf90w_key_5;
extern int const glf90w_key_6;
extern int const glf90w_key_7;
extern int const glf90w_key_8;
extern int const glf90w_key_9;
extern int const glf90w_key_semicolon;
extern int const glf90w_key_equal;
extern int const glf90w_key_a;
extern int const glf90w_key_b;
extern int const glf90w_key_c;
extern int const glf90w_key_d;
extern int const glf90w_key_e;
extern int const glf90w_key_f;
extern int const glf90w_key_g;
extern int const glf90w_key_h;
extern int const glf90w_key_i;
extern int const glf90w_key_j;
extern int const glf90w_key_k;
extern int const glf90w_key_l;
extern int const glf90w_key_m;
extern int const glf90w_key_n;
extern int const glf90w_key_o;
extern int const glf90w_key_p;
extern int const glf90w_key_q;
extern int const glf90w_key_r;
extern int const glf90w_key_s;
extern int const glf90w_key_t;
extern int const glf90w_key_u;
extern int const glf90w_key_v;
extern int const glf90w_key_w;
extern int const glf90w_key_x;
extern int const glf90w_key_y;
extern int const glf90w_key_z;
extern int const glf90w_key_left_bracket;
extern int const glf90w_key_backslash;
extern int const glf90w_key_right_bracket;
extern int const glf90w_key_grave_accent;
extern int const glf90w_key_world_1;
extern int const glf90w_key_world_2;