src/glf90w.f90

! ------------------
!
! GLF90W (for GLFW 3.4) - https://github.com/AarnoldGad/glf90w
! Fortran 2003 bindings for GLFW (Yes, I know...)
!
! ------------------
! glf90w.f90
! 25 Feb 2024
! Gaétan J.A.M. Jalin
! See end of file for complete licence description
! ------------------
module glf90w
    use, intrinsic :: iso_c_binding, only: c_ptr, c_funptr, c_char, c_int, c_float, c_null_ptr, c_null_funptr

    implicit none
    private
    save


    ! --------------------------------------------------------------------------
    ! GLFW API tokens
    ! --------------------------------------------------------------------------


    integer(kind=c_int), bind(C, name="glf90w_version_major"),                public :: GLFW_VERSION_MAJOR
    integer(kind=c_int), bind(C, name="glf90w_version_minor"),                public :: GLFW_VERSION_MINOR
    integer(kind=c_int), bind(C, name="glf90w_version_revision"),             public :: GLFW_VERSION_REVISION
    integer(kind=c_int), bind(C, name="glf90w_true"),                         public :: GLFW_TRUE
    integer(kind=c_int), bind(C, name="glf90w_false"),                        public :: GLFW_FALSE

    integer(kind=c_int), bind(C, name="glf90w_release"),                      public :: GLFW_RELEASE
    integer(kind=c_int), bind(C, name="glf90w_press"),                        public :: GLFW_PRESS
    integer(kind=c_int), bind(C, name="glf90w_repeat"),                       public :: GLFW_REPEAT
    integer(kind=c_int), bind(C, name="glf90w_hat_centered"),                 public :: GLFW_HAT_CENTERED
    integer(kind=c_int), bind(C, name="glf90w_hat_up"),                       public :: GLFW_HAT_UP
    integer(kind=c_int), bind(C, name="glf90w_hat_right"),                    public :: GLFW_HAT_RIGHT
    integer(kind=c_int), bind(C, name="glf90w_hat_down"),                     public :: GLFW_HAT_DOWN
    integer(kind=c_int), bind(C, name="glf90w_hat_left"),                     public :: GLFW_HAT_LEFT
    integer(kind=c_int), bind(C, name="glf90w_hat_right_up"),                 public :: GLFW_HAT_RIGHT_UP
    integer(kind=c_int), bind(C, name="glf90w_hat_right_down"),               public :: GLFW_HAT_RIGHT_DOWN
    integer(kind=c_int), bind(C, name="glf90w_hat_left_up"),                  public :: GLFW_HAT_LEFT_UP
    integer(kind=c_int), bind(C, name="glf90w_hat_left_down"),                public :: GLFW_HAT_LEFT_DOWN

    integer(kind=c_int), bind(C, name="glf90w_key_unknown"),                  public :: GLFW_KEY_UNKNOWN

    integer(kind=c_int), bind(C, name="glf90w_key_space"),                    public :: GLFW_KEY_SPACE
    integer(kind=c_int), bind(C, name="glf90w_key_apostrophe"),               public :: GLFW_KEY_APOSTROPHE
    integer(kind=c_int), bind(C, name="glf90w_key_comma"),                    public :: GLFW_KEY_COMMA
    integer(kind=c_int), bind(C, name="glf90w_key_minus"),                    public :: GLFW_KEY_MINUS
    integer(kind=c_int), bind(C, name="glf90w_key_period"),                   public :: GLFW_KEY_PERIOD
    integer(kind=c_int), bind(C, name="glf90w_key_slash"),                    public :: GLFW_KEY_SLASH
    integer(kind=c_int), bind(C, name="glf90w_key_0"),                        public :: GLFW_KEY_0
    integer(kind=c_int), bind(C, name="glf90w_key_1"),                        public :: GLFW_KEY_1
    integer(kind=c_int), bind(C, name="glf90w_key_2"),                        public :: GLFW_KEY_2
    integer(kind=c_int), bind(C, name="glf90w_key_3"),                        public :: GLFW_KEY_3
    integer(kind=c_int), bind(C, name="glf90w_key_4"),                        public :: GLFW_KEY_4
    integer(kind=c_int), bind(C, name="glf90w_key_5"),                        public :: GLFW_KEY_5
    integer(kind=c_int), bind(C, name="glf90w_key_6"),                        public :: GLFW_KEY_6
    integer(kind=c_int), bind(C, name="glf90w_key_7"),                        public :: GLFW_KEY_7
    integer(kind=c_int), bind(C, name="glf90w_key_8"),                        public :: GLFW_KEY_8
    integer(kind=c_int), bind(C, name="glf90w_key_9"),                        public :: GLFW_KEY_9
    integer(kind=c_int), bind(C, name="glf90w_key_semicolon"),                public :: GLFW_KEY_SEMICOLON
    integer(kind=c_int), bind(C, name="glf90w_key_equal"),                    public :: GLFW_KEY_EQUAL
    integer(kind=c_int), bind(C, name="glf90w_key_a"),                        public :: GLFW_KEY_A
    integer(kind=c_int), bind(C, name="glf90w_key_b"),                        public :: GLFW_KEY_B
    integer(kind=c_int), bind(C, name="glf90w_key_c"),                        public :: GLFW_KEY_C
    integer(kind=c_int), bind(C, name="glf90w_key_d"),                        public :: GLFW_KEY_D
    integer(kind=c_int), bind(C, name="glf90w_key_e"),                        public :: GLFW_KEY_E
    integer(kind=c_int), bind(C, name="glf90w_key_f"),                        public :: GLFW_KEY_F
    integer(kind=c_int), bind(C, name="glf90w_key_g"),                        public :: GLFW_KEY_G
    integer(kind=c_int), bind(C, name="glf90w_key_h"),                        public :: GLFW_KEY_H
    integer(kind=c_int), bind(C, name="glf90w_key_i"),                        public :: GLFW_KEY_I
    integer(kind=c_int), bind(C, name="glf90w_key_j"),                        public :: GLFW_KEY_J
    integer(kind=c_int), bind(C, name="glf90w_key_k"),                        public :: GLFW_KEY_K
    integer(kind=c_int), bind(C, name="glf90w_key_l"),                        public :: GLFW_KEY_L
    integer(kind=c_int), bind(C, name="glf90w_key_m"),                        public :: GLFW_KEY_M
    integer(kind=c_int), bind(C, name="glf90w_key_n"),                        public :: GLFW_KEY_N
    integer(kind=c_int), bind(C, name="glf90w_key_o"),                        public :: GLFW_KEY_O
    integer(kind=c_int), bind(C, name="glf90w_key_p"),                        public :: GLFW_KEY_P
    integer(kind=c_int), bind(C, name="glf90w_key_q"),                        public :: GLFW_KEY_Q
    integer(kind=c_int), bind(C, name="glf90w_key_r"),                        public :: GLFW_KEY_R
    integer(kind=c_int), bind(C, name="glf90w_key_s"),                        public :: GLFW_KEY_S
    integer(kind=c_int), bind(C, name="glf90w_key_t"),                        public :: GLFW_KEY_T
    integer(kind=c_int), bind(C, name="glf90w_key_u"),                        public :: GLFW_KEY_U
    integer(kind=c_int), bind(C, name="glf90w_key_v"),                        public :: GLFW_KEY_V
    integer(kind=c_int), bind(C, name="glf90w_key_w"),                        public :: GLFW_KEY_W
    integer(kind=c_int), bind(C, name="glf90w_key_x"),                        public :: GLFW_KEY_X
    integer(kind=c_int), bind(C, name="glf90w_key_y"),                        public :: GLFW_KEY_Y
    integer(kind=c_int), bind(C, name="glf90w_key_z"),                        public :: GLFW_KEY_Z
    integer(kind=c_int), bind(C, name="glf90w_key_left_bracket"),             public :: GLFW_KEY_LEFT_BRACKET
    integer(kind=c_int), bind(C, name="glf90w_key_backslash"),                public :: GLFW_KEY_BACKSLASH
    integer(kind=c_int), bind(C, name="glf90w_key_right_bracket"),            public :: GLFW_KEY_RIGHT_BRACKET
    integer(kind=c_int), bind(C, name="glf90w_key_grave_accent"),             public :: GLFW_KEY_GRAVE_ACCENT
    integer(kind=c_int), bind(C, name="glf90w_key_world_1"),                  public :: GLFW_KEY_WORLD_1
    integer(kind=c_int), bind(C, name="glf90w_key_world_2"),                  public :: GLFW_KEY_WORLD_2
